--- a/index.html
+++ b/index.html
@@ -4,64 +4,101 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>TEDx Adana Fen</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     :root { --ted-red: #e62b1e; }
-    body { font-family: system-ui, Arial, sans-serif; margin: 0; color: #222; }
-    header { background: var(--ted-red); color: #fff; padding: 36px 20px; text-align: center; }
-    nav { background: #111; padding: 10px; display: flex; gap: 16px; justify-content: center; }
-    nav a { color: #fff; text-decoration: none; font-weight: 600; }
-    nav a:hover { text-decoration: underline; }
-    main { max-width: 960px; margin: 24px auto; padding: 0 16px; }
-    section { margin: 32px 0; }
-    h2 { border-bottom: 2px solid #eee; padding-bottom: 8px; }
-    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 16px; }
-    .card { border: 1px solid #eee; border-radius: 8px; padding: 16px; }
-    footer { background: #f7f7f7; padding: 16px; text-align: center; font-size: 14px; }
+    .navbar { background-color: #111; }
+    .navbar a { color: #fff !important; font-weight: 600; }
+    .hero {
+      background: var(--ted-red);
+      color: #fff;
+      padding: 80px 20px;
+      text-align: center;
+    }
+    .hero h1 { font-size: 3rem; font-weight: bold; }
+    .hero p { font-size: 1.25rem; }
+    footer { background: #111; color: #fff; padding: 20px; text-align: center; }
   </style>
 </head>
 <body>
-  <header>
-    <h1>TEDx Adana Fen</h1>
-    <p>Fikirlerimizi paylaşıyoruz</p>
-  </header>
-  <nav>
-    <a href="#hakkinda">Hakkında</a>
-    <a href="#konusmacilar">Konuşmacılar</a>
-    <a href="#program">Program</a>
-    <a href="#iletisim">İletişim</a>
-  </nav>
-  <main>
-    <section id="hakkinda">
-      <h2>Hakkında</h2>
-      <p>TEDx Adana Fen, bağımsız olarak düzenlenen ve ilham verici fikirleri paylaşmayı amaçlayan yerel bir TEDx etkinliğidir.</p>
-    </section>
-
-    <section id="konusmacilar">
-      <h2>Konuşmacılar</h2>
-      <div class="grid">
-        <div class="card"><strong>Konuşmacı 1</strong><br>Konusu kısa açıklama.</div>
-        <div class="card"><strong>Konuşmacı 2</strong><br>Konusu kısa açıklama.</div>
-        <div class="card"><strong>Konuşmacı 3</strong><br>Konusu kısa açıklama.</div>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brand text-white" href="#">TEDx Adana Fen</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#hakkinda">Hakkında</a></li>
+          <li class="nav-item"><a class="nav-link" href="#konusmacilar">Konuşmacılar</a></li>
+          <li class="nav-item"><a class="nav-link" href="#program">Program</a></li>
+          <li class="nav-item"><a class="nav-link" href="#iletisim">İletişim</a></li>
+        </ul>
       </div>
-    </section>
+    </div>
+  </nav>
 
-    <section id="program">
-      <h2>Program</h2>
-      <ul>
-        <li>10:00 — Açılış</li>
-        <li>10:30 — Konuşma 1</li>
-        <li>11:30 — Ara</li>
-        <li>12:00 — Konuşma 2</li>
-      </ul>
-    </section>
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1>TEDx Adana Fen</h1>
+    <p>Fikirlerimizi Paylaşıyoruz</p>
+    <a href="#program" class="btn btn-light btn-lg mt-3">Programı Gör</a>
+  </section>
 
-    <section id="iletisim">
-      <h2>İletişim</h2>
-      <p>E-posta: info@tedxadanafen.org (örnek)</p>
-    </section>
-  </main>
+  <!-- Hakkında -->
+  <section id="hakkinda" class="container my-5">
+    <h2>Hakkında</h2>
+    <p>TEDx Adana Fen, bağımsız olarak düzenlenen ve ilham verici fikirleri paylaşmayı amaçlayan yerel bir TEDx etkinliğidir.</p>
+  </section>
+
+  <!-- Konuşmacılar -->
+  <section id="konusmacilar" class="container my-5">
+    <h2>Konuşmacılar</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card p-3">
+          <h5>Konuşmacı 1</h5>
+          <p>Konu açıklaması</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card p-3">
+          <h5>Konuşmacı 2</h5>
+          <p>Konu açıklaması</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card p-3">
+          <h5>Konuşmacı 3</h5>
+          <p>Konu açıklaması</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Program -->
+  <section id="program" class="container my-5">
+    <h2>Program</h2>
+    <ul class="list-group">
+      <li class="list-group-item">10:00 — Açılış</li>
+      <li class="list-group-item">10:30 — Konuşma 1</li>
+      <li class="list-group-item">11:30 — Ara</li>
+      <li class="list-group-item">12:00 — Konuşma 2</li>
+    </ul>
+  </section>
+
+  <!-- İletişim -->
+  <section id="iletisim" class="container my-5">
+    <h2>İletişim</h2>
+    <p>Email: tedxadanafen@gmail.com</p>
+    <p>Instagram: @tedxadanafen</p>
+  </section>
+
+  <!-- Footer -->
   <footer>
     © 2025 TEDx Adana Fen
   </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
