--- a/index.html
+++ b/index.html
@@ -94,49 +94,59 @@
 <!-- Kadro -->
 <section id="kadro" class="container my-5">
   <h2>Kadro</h2>
-  <div class="row">
-    <!-- Organizator -->
+
+  <!-- Organizator ve Co-Founder -->
+  <div class="row justify-content-center mb-4">
     <div class="col-md-4">
-      <div class="card p-3 text-center">
-        <h5>Organizatör</h5>
-        <p>Ad Soyad</p>
+      <div class="card text-white text-center" style="background-color: #111;">
+        <div class="card-body">
+          <h5 class="card-title">Organizator</h5>
+          <p class="card-text">Alya Erteni</p>
+        </div>
       </div>
     </div>
-    <!-- Co-Founder -->
     <div class="col-md-4">
-      <div class="card p-3 text-center">
-        <h5>Kurucu Ortak</h5>
-        <p>Ad Soyad</p>
+      <div class="card text-white text-center" style="background-color: #111;">
+        <div class="card-body">
+          <h5 class="card-title">Co-Founder</h5>
+          <p class="card-text">Ömer Raif Özoğlu</p>
+        </div>
       </div>
     </div>
-    <!-- Boş alan -->
-    <div class="col-md-4"></div>
   </div>
 
-  <div class="row mt-4">
-    <!-- Media Team -->
+  <!-- Ekipler -->
+  <div class="row">
     <div class="col-md-4">
-      <div class="card p-3 text-center">
-        <h5>Medya Ekibi</h5>
-        <p>Ad Soyad</p>
+      <div class="card text-dark text-center" style="background-color: #e62b1e;">
+        <div class="card-body">
+          <h5 class="card-title">Media Team</h5>
+          <p class="card-text">Mehmet Ulaç Girgin</p>
+          <p class="card-text">Elif Su Özdemir</p>
+          <p class="card-text">Kuzey Çelik</p>
+          <p class="card-text"></p>
+        </div>
       </div>
     </div>
-    <!-- Treasure Team -->
     <div class="col-md-4">
-      <div class="card p-3 text-center">
-        <h5>Mali İşler Ekibi</h5>
-        <p>Ad Soyad</p>
+      <div class="card text-dark text-center" style="background-color: #e62b1e;">
+        <div class="card-body">
+          <h5 class="card-title">Event Team</h5>
+          <p class="card-text">Ad Soyad</p>
+        </div>
       </div>
     </div>
-    <!-- Event Team -->
     <div class="col-md-4">
-      <div class="card p-3 text-center">
-        <h5>Etkinlik Ekibi</h5>
-        <p>Ad Soyad</p>
+      <div class="card text-dark text-center" style="background-color: #e62b1e;">
+        <div class="card-body">
+          <h5 class="card-title">Treasure Team</h5>
+          <p class="card-text">Ad Soyad</p>
+        </div>
       </div>
     </div>
   </div>
 </section>
+
 
   <!-- İletişim -->
   <section id="iletisim" class="container my-5">
