--- a/index.html
+++ b/index.html
@@ -4,163 +4,234 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>TEDx Adana Fen</title>
-  <!-- Bootstrap CSS -->
+
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <style>
     :root { --ted-red: #e62b1e; }
-    .navbar { background-color: #111; }
-    .navbar a { color: #fff !important; font-weight: 600; }
+
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #f9f9f9;
+    }
+
+    .navbar {
+      background: #111;
+      padding: 15px 0;
+    }
+    .navbar a { color: white !important; font-weight: 600; }
+
+    .logo-img { height: 48px; }
+
+    /* HERO */
     .hero {
-      background: var(--ted-red);
-      color: #fff;
-      padding: 80px 20px;
+      background: linear-gradient(135deg, #111, var(--ted-red));
+      color: white;
+      padding: 120px 20px;
       text-align: center;
     }
-    .hero h1 { font-size: 3rem; font-weight: bold; }
-    .hero p { font-size: 1.25rem; }
-    footer { background: #111; color: #fff; padding: 20px; text-align: center; }
-    .logo-img { height: 50px; margin-right: 10px; }
+    .hero h1 { font-size: 3.4rem; font-weight: 800; }
+    .hero p { font-size: 1.3rem; margin-top: 10px; }
+
+    /* Section Titles */
+    h2 {
+      font-weight: 700;
+      border-left: 6px solid var(--ted-red);
+      padding-left: 10px;
+      margin-bottom: 25px;
+    }
+
+    /* Cards */
+    .info-card {
+      background: white;
+      border-radius: 12px;
+      padding: 25px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      transition: .2s;
+    }
+    .info-card:hover {
+      transform: translateY(-4px);
+    }
+
+    .vision-box, .mission-box {
+      background: #fff;
+      border-left: 6px solid var(--ted-red);
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    }
+
+    footer {
+      background: #111;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+    }
   </style>
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg">
-    <div class="container">
-      <img src="image.png" alt="Adana Fen Lisesi Logosu" class="logo-img">
-      <a class="navbar-brand text-white" href="#">TEDx Adana Fen</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon bg-light"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#hakkinda">Hakkında</a></li>
-          <li class="nav-item"><a class="nav-link" href="#konusmacilar">Konuşmacılar</a></li>
-          <li class="nav-item"><a class="nav-link" href="#program">Program</a></li>
-          <li class="nav-item"><a class="nav-link" href="#iletisim">İletişim</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <h1>TEDx Adana Fen</h1>
-    <p>Fikirlerimizi Paylaşıyoruz</p>
-    <a href="#program" class="btn btn-light btn-lg mt-3">Programı Gör</a>
-  </section>
+<!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg">
+  <div class="container">
+    <img src="image.png" class="logo-img" alt="logo">
+    <a class="navbar-brand" href="#">TEDx Adana Fen</a>
 
-  <!-- Hakkında -->
-  <section id="hakkinda" class="container my-5">
-    <h2>Hakkında</h2>
-    <p>TEDx Adana Fen, bağımsız olarak düzenlenen ve ilham verici fikirleri paylaşmayı amaçlayan yerel bir TEDx etkinliğidir.</p>
-  </section>
+    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
+      <span class="navbar-toggler-icon bg-light"></span>
+    </button>
 
-  <!-- Konuşmacılar -->
-  <section id="konusmacilar" class="container my-5">
-    <h2>Konuşmacılar</h2>
-    <div class="row">
-      <div class="col-md-4">
-        <div class="card p-3">
-          <h5>Konuşmacı 1</h5>
-          <p>Konu açıklaması</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card p-3">
-          <h5>Konuşmacı 2</h5>
-          <p>Konu açıklaması</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card p-3">
-          <h5>Konuşmacı 3</h5>
-          <p>Konu açıklaması</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Program -->
-  <section id="program" class="container my-5">
-    <h2>Program</h2>
-    <ul class="list-group">
-      <li class="list-group-item">10:00 — Açılış</li>
-      <li class="list-group-item">10:30 — Konuşma 1</li>
-      <li class="list-group-item">11:30 — Ara</li>
-      <li class="list-group-item">12:00 — Konuşma 2</li>
-    </ul>
-  </section>
-
-<!-- Kadro -->
-<section id="kadro" class="container my-5">
-  <h2>Kadro</h2>
-
-  <!-- Organizator ve Co-Founder -->
-  <div class="row justify-content-center mb-4">
-    <div class="col-md-4">
-      <div class="card text-white text-center" style="background-color: #111;">
-        <div class="card-body">
-          <h5 class="card-title">Organizator</h5>
-          <p class="card-text">Alya Erteni</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card text-white text-center" style="background-color: #111;">
-        <div class="card-body">
-          <h5 class="card-title">Co-Founder</h5>
-          <p class="card-text">Ömer Raif Özoğlu</p>
-        </div>
-      </div>
+    <div id="nav" class="collapse navbar-collapse">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="#hakkinda">Hakkında</a></li>
+        <li class="nav-item"><a class="nav-link" href="#konusmacilar">Konuşmacılar</a></li>
+        <li class="nav-item"><a class="nav-link" href="#program">Program</a></li>
+        <li class="nav-item"><a class="nav-link" href="#kadro">Kadro</a></li>
+        <li class="nav-item"><a class="nav-link" href="#iletisim">İletişim</a></li>
+      </ul>
     </div>
   </div>
+</nav>
 
-  <!-- Ekipler -->
-  <div class="row">
-    <div class="col-md-4">
-      <div class="card text-dark text-center" style="background-color: #e62b1e;">
-        <div class="card-body">
-          <h5 class="card-title">Media Team</h5>
-          <p class="card-text">Mehmet Ulaç Girgin</p>
-          <p class="card-text">Elif Su Özdemir</p>
-          <p class="card-text">Kuzey Çelik</p>
-          <p class="card-text"></p>
-        </div>
+<!-- HERO -->
+<section class="hero">
+  <h1>TEDx Adana Fen</h1>
+  <p>Fikirlerin Dönüştürücü Gücüne İnanıyoruz</p>
+  <a href="#program" class="btn btn-light btn-lg mt-3">Programı Gör</a>
+</section>
+
+<!-- HAKKINDA -->
+<section id="hakkinda" class="container my-5">
+  <h2>Hakkında</h2>
+
+  <p class="mb-4">
+    TEDx Adana Fen, gençlerin fikir üretme kültürünü desteklemeyi, ilham veren konuşmalar aracılığıyla
+    toplulukta düşünsel bir hareketlilik oluşturmayı amaçlayan bağımsız bir TEDx etkinliğidir.
+    Amacımız; öğrencilerin merak duygusunu, yaratıcılığını ve toplumsal farkındalığını güçlendiren
+    bir paylaşım alanı oluşturmaktır.
+  </p>
+
+  <div class="row g-4">
+    <div class="col-md-6">
+      <div class="vision-box">
+        <h4 class="fw-bold text-dark">Vizyonumuz</h4>
+        <p>
+          Düşüncenin dönüştürücü gücüne inanan bir gençlik topluluğu oluşturmak.
+          İlham veren konuşmaların öğrenciler arasında yeni bakış açıları ve yaratıcı çözümler üretmesini
+          hedefliyoruz. TEDx Adana Fen olarak, geleceğin liderlerini düşünmeye,
+          sorgulamaya ve üretmeye teşvik eden bir ortam yaratmayı vizyon ediniyoruz.
+        </p>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="card text-dark text-center" style="background-color: #e62b1e;">
-        <div class="card-body">
-          <h5 class="card-title">Event Team</h5>
-          <p class="card-text">Ad Soyad</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card text-dark text-center" style="background-color: #e62b1e;">
-        <div class="card-body">
-          <h5 class="card-title">Treasure Team</h5>
-          <p class="card-text">Ad Soyad</p>
-        </div>
+
+    <div class="col-md-6">
+      <div class="mission-box">
+        <h4 class="fw-bold text-dark">Misyonumuz</h4>
+        <p>
+          Öğrencilere kendi seslerini duyurabilecekleri bir platform sunmak; fikirlerini özgürce ifade edebilecekleri,
+          yeni deneyimlerle büyüyebilecekleri bir alan yaratmak. Misyonumuz, öğrenmeyi sadece akademik başarıyla
+          sınırlamayan; sosyal, kültürel ve bilimsel gelişimi destekleyen bir paylaşım kültürü oluşturmaktır.
+        </p>
       </div>
     </div>
   </div>
 </section>
 
+<!-- KONUŞMACILAR -->
+<section id="konusmacilar" class="container my-5">
+  <h2>Konuşmacılar</h2>
+  <div class="row g-4">
+    <div class="col-md-4">
+      <div class="info-card">
+        <h5>Konuşmacı 1</h5>
+        <p>Konu açıklaması</p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="info-card">
+        <h5>Konuşmacı 2</h5>
+        <p>Konu açıklaması</p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="info-card">
+        <h5>Konuşmacı 3</h5>
+        <p>Konu açıklaması</p>
+      </div>
+    </div>
+  </div>
+</section>
 
-  <!-- İletişim -->
-  <section id="iletisim" class="container my-5">
-    <h2>İletişim</h2>
-    <p>Email: tedxadanafen@gmail.com</p>
-    <p>Instagram: @tedxadanafen</p>
-  </section>
+<!-- PROGRAM -->
+<section id="program" class="container my-5">
+  <h2>Program</h2>
+  <ul class="list-group shadow-sm">
+    <li class="list-group-item">10:00 — Açılış</li>
+    <li class="list-group-item">10:30 — Konuşma 1</li>
+    <li class="list-group-item">11:30 — Ara</li>
+    <li class="list-group-item">12:00 — Konuşma 2</li>
+  </ul>
+</section>
 
-  <!-- Footer -->
-  <footer>
-    © 2025 TEDx Adana Fen
-  </footer>
+<!-- KADRO -->
+<section id="kadro" class="container my-5">
+  <h2>Kadro</h2>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <div class="row justify-content-center g-4 mb-4">
+    <div class="col-md-4">
+      <div class="info-card text-center">
+        <h5>Organizator</h5>
+        <p>Alya Erteni</p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="info-card text-center">
+        <h5>Co-Founder</h5>
+        <p>Ömer Raif Özoğlu</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="row g-4">
+    <div class="col-md-4">
+      <div class="info-card text-center">
+        <h5>Media Team</h5>
+        <p>Mehmet Ulaç Girgin</p>
+        <p>Elif Su Özdemir</p>
+        <p>Kuzey Çelik</p>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="info-card text-center">
+        <h5>Event Team</h5>
+        <p>Ad Soyad</p>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="info-card text-center">
+        <h5>Treasure Team</h5>
+        <p>Ad Soyad</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- İLETİŞİM -->
+<section id="iletisim" class="container my-5">
+  <h2>İletişim</h2>
+  <p><strong>Email:</strong> tedxadanafen@gmail.com</p>
+  <p><strong>Instagram:</strong> @tedxadanafen</p>
+</section>
+
+<footer>
+  © 2025 TEDx Adana Fen — Bu bağımsız TEDx etkinliği, TED lisansı altında düzenlenmektedir.
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
