--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>TEDx Adana Fen</title>
 
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
@@ -23,6 +24,7 @@
 
     .logo-img { height: 48px; }
 
+    /* HERO */
     .hero {
       background: linear-gradient(135deg, #111, var(--ted-red));
       color: white;
@@ -32,6 +34,7 @@
     .hero h1 { font-size: 3.4rem; font-weight: 800; }
     .hero p { font-size: 1.3rem; margin-top: 10px; }
 
+    /* Section Titles */
     h2 {
       font-weight: 700;
       border-left: 6px solid var(--ted-red);
@@ -39,7 +42,7 @@
       margin-bottom: 25px;
     }
 
-    /* CARD GENEL */
+    /* Cards */
     .info-card {
       background: white;
       border-radius: 12px;
@@ -47,43 +50,39 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.08);
       transition: .2s;
     }
-    .info-card:hover { transform: translateY(-4px); }
+    .info-card:hover {
+      transform: translateY(-4px);
+    }
 
-    /* BAŞLIK GÜÇLENDİRME */
-    .card-title-strong {
+    /* Başlık güçlendirme */
+    .info-card h5 {
+      font-size: 1.45rem;
       font-weight: 800;
-      font-size: 1.4rem;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
     }
 
-    /* TEAM CARD STİLLERİ */
-    .team-red {
-      background: linear-gradient(145deg, #ff3b2f, #e62b1e);
-      color: black;
-      border-radius: 12px;
-      padding: 25px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.12);
+    /* Siyah kutular */
+    .black-box {
+      background: #000 !important;
+      color: #fff !important;
     }
 
-    .team-black {
-      background: #111;
-      color: white;
-      border-radius: 12px;
-      padding: 25px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.12);
+    /* Kırmızı kutular (gradientli) */
+    .red-box {
+      background: linear-gradient(145deg, #e62b1e, #b01f17) !important;
+      color: #000 !important;
+      opacity: 0.95;
     }
 
-    /* KONUSMACI KARTLARI */
-    .speaker-card {
-      background: linear-gradient(145deg, #ff3b2f, #e62b1e);
-      color: white;
-      border-radius: 12px;
-      padding: 25px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.12);
+    .red-box p {
+      font-weight: 500;
     }
-    .speaker-card h5 {
-      font-weight: 800;
-      font-size: 1.4rem;
+
+    /* Konuşmacı kutuları */
+    .speaker-box {
+      background: linear-gradient(145deg, #e62b1e, #b01f17) !important;
+      color: white !important;
+      opacity: 0.95;
     }
 
     footer {
@@ -97,6 +96,7 @@
 </head>
 <body>
 
+<!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg">
   <div class="container">
     <img src="image.png" class="logo-img" alt="logo">
@@ -118,26 +118,97 @@
   </div>
 </nav>
 
+<!-- HERO -->
 <section class="hero">
   <h1>TEDx Adana Fen</h1>
   <p>Fikirlerin Dönüştürücü Gücüne İnanıyoruz</p>
   <a href="#program" class="btn btn-light btn-lg mt-3">Programı Gör</a>
 </section>
 
+<!-- HAKKINDA -->
+<section id="hakkinda" class="container my-5">
+  <h2>Hakkında</h2>
+
+  <p class="mb-4">
+    TEDx Adana Fen, gençlerin fikir üretme kültürünü desteklemeyi, ilham veren konuşmalar aracılığıyla
+    toplulukta düşünsel bir hareketlilik oluşturmayı amaçlayan bağımsız bir TEDx etkinliğidir.
+  </p>
+</section>
+
 <!-- KONUŞMACILAR -->
 <section id="konusmacilar" class="container my-5">
   <h2>Konuşmacılar</h2>
   <div class="row g-4">
+
     <!-- 8 Konuşmacı -->
-    <div class="col-md-3"><div class="speaker-card"><h5>Konuşmacı 1</h5><p>Konu açıklaması</p></div></div>
-    <div class="col-md-3"><div class="speaker-card"><h5>Konuşmacı 2</h5><p>Konu açıklaması</p></div></div>
-    <div class="col-md-3"><div class="speaker-card"><h5>Konuşmacı 3</h5><p>Konu açıklaması</p></div></div>
-    <div class="col-md-3"><div class="speaker-card"><h5>Konuşmacı 4</h5><p>Konu açıklaması</p></div></div>
-    <div class="col-md-3"><div class="speaker-card"><h5>Konuşmacı 5</h5><p>Konu açıklaması</p></div></div>
-    <div class="col-md-3"><div class="speaker-card"><h5>Konuşmacı 6</h5><p>Konu açıklaması</p></div></div>
-    <div class="col-md-3"><div class="speaker-card"><h5>Konuşmacı 7</h5><p>Konu açıklaması</p></div></div>
-    <div class="col-md-3"><div class="speaker-card"><h5>Konuşmacı 8</h5><p>Konu açıklaması</p></div></div>
+    <div class="col-md-3">
+      <div class="info-card speaker-box">
+        <h5>Konuşmacı 1</h5>
+        <p>Konu açıklaması</p>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="info-card speaker-box">
+        <h5>Konuşmacı 2</h5>
+        <p>Konu açıklaması</p>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="info-card speaker-box">
+        <h5>Konuşmacı 3</h5>
+        <p>Konu açıklaması</p>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="info-card speaker-box">
+        <h5>Konuşmacı 4</h5>
+        <p>Konu açıklaması</p>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="info-card speaker-box">
+        <h5>Konuşmacı 5</h5>
+        <p>Konu açıklaması</p>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="info-card speaker-box">
+        <h5>Konuşmacı 6</h5>
+        <p>Konu açıklaması</p>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="info-card speaker-box">
+        <h5>Konuşmacı 7</h5>
+        <p>Konu açıklaması</p>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="info-card speaker-box">
+        <h5>Konuşmacı 8</h5>
+        <p>Konu açıklaması</p>
+      </div>
+    </div>
+
   </div>
+</section>
+
+<!-- PROGRAM -->
+<section id="program" class="container my-5">
+  <h2>Program</h2>
+  <ul class="list-group shadow-sm">
+    <li class="list-group-item">10:00 — Açılış</li>
+    <li class="list-group-item">10:30 — Konuşma 1</li>
+    <li class="list-group-item">11:30 — Ara</li>
+    <li class="list-group-item">12:00 — Konuşma 2</li>
+  </ul>
 </section>
 
 <!-- KADRO -->
@@ -145,58 +216,23 @@
   <h2>Kadro</h2>
 
   <div class="row justify-content-center g-4 mb-4">
+
+    <!-- Siyah kutular -->
     <div class="col-md-4">
-      <div class="team-black text-center">
-        <h5 class="card-title-strong">ORGANIZATOR</h5>
+      <div class="info-card text-center black-box">
+        <h5>Organizator</h5>
         <p>Alya Erteni</p>
       </div>
     </div>
+
     <div class="col-md-4">
-      <div class="team-black text-center">
-        <h5 class="card-title-strong">CO-FOUNDER</h5>
+      <div class="info-card text-center black-box">
+        <h5>Co-Founder</h5>
         <p>Ömer Raif Özoğlu</p>
       </div>
     </div>
   </div>
 
+  <!-- Kırmızı kutular -->
   <div class="row g-4">
-    <div class="col-md-4">
-      <div class="team-red text-center">
-        <h5 class="card-title-strong">MEDIA TEAM</h5>
-        <p>Mehmet Ulaç Girgin</p>
-        <p>Elif Su Özdemir</p>
-        <p>Kuzey Çelik</p>
-      </div>
-    </div>
-
-    <div class="col-md-4">
-      <div class="team-red text-center">
-        <h5 class="card-title-strong">EVENT TEAM</h5>
-        <p>Ad Soyad</p>
-      </div>
-    </div>
-
-    <div class="col-md-4">
-      <div class="team-red text-center">
-        <h5 class="card-title-strong">TREASURE TEAM</h5>
-        <p>Ad Soyad</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- İLETİŞİM -->
-<section id="iletisim" class="container my-5">
-  <h2>İletişim</h2>
-  <p><strong>Email:</strong> tedxadanafen@gmail.com</p>
-  <p><strong>Instagram:</strong> @tedxadanafen</p>
-</section>
-
-<footer>
-  © 2025 TEDx Adana Fen — Bu bağımsız TEDx etkinliği, TED lisansı altında düzenlenmektedir.
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
-</body>
-</html>
+    <
