--- a/index.html
+++ b/index.html
@@ -113,7 +113,6 @@
 <!-- HAKKINDA -->
 <section id="hakkinda" class="container my-5">
   <h2>Hakkında</h2>
-
   <p class="mb-4">
     TEDx Adana Fen, gençlerin fikir üretme kültürünü desteklemeyi, ilham veren konuşmalar aracılığıyla
     toplulukta düşünsel bir hareketlilik oluşturmayı amaçlayan bağımsız bir TEDx etkinliğidir.
@@ -124,64 +123,15 @@
 <section id="konusmacilar" class="container my-5">
   <h2>Konuşmacılar</h2>
   <div class="row g-4">
-
     <!-- 8 Konuşmacı -->
-    <div class="col-md-3">
-      <div class="info-card speaker-box">
-        <h5>Konuşmacı 1</h5>
-        <p>Konu açıklaması</p>
-      </div>
-    </div>
-
-    <div class="col-md-3">
-      <div class="info-card speaker-box">
-        <h5>Konuşmacı 2</h5>
-        <p>Konu açıklaması</p>
-      </div>
-    </div>
-
-    <div class="col-md-3">
-      <div class="info-card speaker-box">
-        <h5>Konuşmacı 3</h5>
-        <p>Konu açıklaması</p>
-      </div>
-    </div>
-
-    <div class="col-md-3">
-      <div class="info-card speaker-box">
-        <h5>Konuşmacı 4</h5>
-        <p>Konu açıklaması</p>
-      </div>
-    </div>
-
-    <div class="col-md-3">
-      <div class="info-card speaker-box">
-        <h5>Konuşmacı 5</h5>
-        <p>Konu açıklaması</p>
-      </div>
-    </div>
-
-    <div class="col-md-3">
-      <div class="info-card speaker-box">
-        <h5>Konuşmacı 6</h5>
-        <p>Konu açıklaması</p>
-      </div>
-    </div>
-
-    <div class="col-md-3">
-      <div class="info-card speaker-box">
-        <h5>Konuşmacı 7</h5>
-        <p>Konu açıklaması</p>
-      </div>
-    </div>
-
-    <div class="col-md-3">
-      <div class="info-card speaker-box">
-        <h5>Konuşmacı 8</h5>
-        <p>Konu açıklaması</p>
-      </div>
-    </div>
-
+    <div class="col-md-3"><div class="info-card speaker-box"><h5>Konuşmacı 1</h5><p>Konu açıklaması</p></div></div>
+    <div class="col-md-3"><div class="info-card speaker-box"><h5>Konuşmacı 2</h5><p>Konu açıklaması</p></div></div>
+    <div class="col-md-3"><div class="info-card speaker-box"><h5>Konuşmacı 3</h5><p>Konu açıklaması</p></div></div>
+    <div class="col-md-3"><div class="info-card speaker-box"><h5>Konuşmacı 4</h5><p>Konu açıklaması</p></div></div>
+    <div class="col-md-3"><div class="info-card speaker-box"><h5>Konuşmacı 5</h5><p>Konu açıklaması</p></div></div>
+    <div class="col-md-3"><div class="info-card speaker-box"><h5>Konuşmacı 6</h5><p>Konu açıklaması</p></div></div>
+    <div class="col-md-3"><div class="info-card speaker-box"><h5>Konuşmacı 7</h5><p>Konu açıklaması</p></div></div>
+    <div class="col-md-3"><div class="info-card speaker-box"><h5>Konuşmacı 8</h5><p>Konu açıklaması</p></div></div>
   </div>
 </section>
 
@@ -200,17 +150,15 @@
 <section id="kadro" class="container my-5">
   <h2>Kadro</h2>
 
-  <div class="row justify-content-center g-4 mb-4">
-
-    <!-- Siyah kutular -->
-    <div class="col-md-4">
+  <!-- Organizator ve Co-Founder -->
+  <div class="row justify-content-center mb-4">
+    <div class="col-md-4 mb-3">
       <div class="info-card text-center black-box">
-        <h5>Organizator</h5>
+        <h5>Organizatör</h5>
         <p>Alya Erteni</p>
       </div>
     </div>
-
-    <div class="col-md-4">
+    <div class="col-md-4 mb-3">
       <div class="info-card text-center black-box">
         <h5>Co-Founder</h5>
         <p>Ömer Raif Özoğlu</p>
@@ -218,9 +166,9 @@
     </div>
   </div>
 
-  <!-- Kırmızı kutular -->
-  <div class="row g-4">
-    <div class="col-md-4">
+  <!-- Media, Event, Treasure Teams -->
+  <div class="row">
+    <div class="col-md-4 mb-3">
       <div class="info-card text-center red-box">
         <h5>Media Team</h5>
         <p>Mehmet Ulaç Girgin</p>
@@ -228,15 +176,13 @@
         <p>Kuzey Çelik</p>
       </div>
     </div>
-
-    <div class="col-md-4">
+    <div class="col-md-4 mb-3">
       <div class="info-card text-center red-box">
         <h5>Event Team</h5>
         <p>Ad Soyad</p>
       </div>
     </div>
-
-    <div class="col-md-4">
+    <div class="col-md-4 mb-3">
       <div class="info-card text-center red-box">
         <h5>Treasure Team</h5>
         <p>Ad Soyad</p>
@@ -254,9 +200,4 @@
 
 <footer>
   © 2025 TEDx Adana Fen — Bu bağımsız TEDx etkinliği, TED lisansı altında düzenlenmektedir.
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
-</body>
-</html>
+</footer
