--- a/index.html
+++ b/index.html
@@ -261,25 +261,18 @@
           </div>
           <h2 class="section-title mb-3">Kısa hikayemiz</h2>
           <p class="muted">
-            TEDx Adana Fen, yerel topluluk içinde yenilikçi fikirlerin paylaşılmasını destekleyen, bağımsız olarak organize edilen bir TEDx etkinliğidir.
-            Amacımız gençlerin ve profesyonellerin aynı sahnede buluşarak birbirinden öğrenmesi ve yeni işbirliklerinin doğmasıdır.
-          </p>
-
+           TEDx Adana Fen, gençlerin fikir üretme, paylaşma ve dünyayı dönüştürme potansiyeline inanan bağımsız bir TEDx organizasyonudur. Amacımız; bilimin, sanatın, teknolojinin ve toplumsal sorunlara yenilikçi bakış açıları geliştiren fikirlerin bir araya geldiği özgün bir sahne oluşturmaktır. Her yıl Türkiye’nin ve dünyanın farklı noktalarından ilham verici konuşmacıları ağırlayarak, düşünmeye, sorgulamaya ve harekete geçmeye teşvik eden bir topluluk inşa ediyoruz.</p>
           <div class="row g-3 mt-4">
             <div class="col-md-6">
               <div class="card-modern p-4 h-100">
                 <div class="section-kicker mb-2">Vizyonumuz</div>
-                <p>
-                  Adana’yı ilham veren fikirlerin buluşma noktası yapmak; öğrenme, üretim ve etki kültürünü sürdürülebilir şekilde yaygınlaştırmak.
-                </p>
+                <p>Gençlerin yalnızca izleyen değil, fikirleriyle geleceği şekillendiren bireyler olduğu; düşüncenin özgürce paylaşıldığı, cesur ve yaratıcı bir fikir ekosistemi oluşturarak Türkiye’nin en etkili öğrenci TEDx organizasyonlarından biri haline gelmek.</p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="card-modern p-4 h-100">
                 <div class="section-kicker mb-2">Misyonumuz</div>
-                <p>
-                  Disiplinler arası konuşmaları erişilebilir kılmak, gençlerin sesini duyurmak ve toplumsal faydayı önceleyen projeleri görünür hale getirmek.
-                </p>
+                <p>Bilime, sanata, teknolojiye ve insanlığa değer katan fikirleri keşfetmek, bu fikirleri toplumla buluşturmak ve gençlerin kendilerini ifade edebilecekleri güvenilir, kapsayıcı ve profesyonel bir platform sunmak. Her konuşmada, her etkinlikte ve her ayrıntıda “paylaşmaya değer fikirler” kültürünü yaşatmak için çalışıyoruz.</p>
               </div>
             </div>
           </div>
@@ -327,7 +320,7 @@
                 <div class="tl-time">11:55 - 12:15</div>
               </div>
               <div class="tl-item">
-                <div class="fw-bold">Öğle Arası</div>
+                <div class="fw-bold">Ara</div>
                 <div class="tl-time">12:15 - 13:30</div>
               </div>
               <div class="tl-item">
@@ -463,10 +456,6 @@
           </div>
         </div>
       </div>
-
-      <div class="mt-4 text-center">
-        <small class="muted">Görseller örnek amaçlıdır; resmi fotoğraflar etkinlikten sonra yayınlanacaktır.</small>
-      </div>
     </div>
   </section>
 
@@ -486,9 +475,6 @@
             <p class="mb-2">
               Adana Fen Lisesi, bilim ve araştırma kültürünü merkezine alan, birçok ulusal başarıya imza atmış köklü bir eğitim kurumudur.
               Modern konferans salonu ve teknik altyapısıyla TEDx etkinlikleri için ideal bir ev sahipliği sunar.
-            </p>
-            <p class="muted mb-0">
-              Ulaşım, otopark ve yönlendirme alanları etkinlik günü boyunca görevli ekipler tarafından desteklenecektir.
             </p>
           </div>
         </div>
