--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
         </div>
         <div class="col-lg-4">
           <div class="card-modern p-0 h-100">
-            <img src="adanafenlisesi.jpg" alt="Adana Fen Lisesi" class="img-fluid rounded-3">
+            <img src="adanafenlisesi.png" alt="Adana Fen Lisesi" class="img-fluid rounded-3">
           </div>
         </div>
       </div>
