--- a/index.html
+++ b/index.html
@@ -307,108 +307,103 @@
     </div>
   </section>
 
-  <!-- Konuşmacılar -->
-  <section id="konusmacilar" class="section">
-    <div class="container">
-      <div class="d-flex align-items-center gap-3 mb-2">
-        <span class="section-kicker">Konuşmacılar</span>
-        <span class="badge text-bg-dark border">8 kişi</span>
-      </div>
-      <h2 class="section-title mb-4">Sahnedeki isimler</h2>
+<!-- Konuşmacılar -->
+<section id="konusmacilar" class="section">
+  <div class="container">
+    <div class="d-flex align-items-center gap-3 mb-2">
+      <span class="section-kicker">Konuşmacılar</span>
+      <span class="badge text-bg-dark border">6 kişi</span>
+    </div>
+    <h2 class="section-title mb-4">Sahnedeki isimler</h2>
 
-      <div class="row g-3">
-        <!-- 1 -->
-        <div class="col-lg-6">
-          <div class="card-modern speaker-card">
-            <img class="speaker-img" alt="Konuşmacı 1" src="https://images.unsplash.com/photo-1607746882042-944635dfe10e?q=80&w=400&auto=format&fit=crop">
-            <div>
-              <div class="speaker-name">Konuşmacı Adı 1</div>
-              <div class="speaker-role">Girişimci</div>
-              <p class="speaker-bio mb-0">Teknoloji ve tasarımın kesişiminde yeni ürünler geliştiren, toplumsal faydayı önceleyen bir lider.</p>
-            </div>
+    <div class="row g-3">
+      <!-- 1: Ahmet Turan Özdemir -->
+      <div class="col-lg-6">
+        <div class="card-modern speaker-card">
+          <img class="speaker-img" alt="Ahmet Turan Özdemir" src="https://media.licdn.com/dms/image/C4D03AQF/image-profile-ahmet.jpg">
+          <div>
+            <div class="speaker-name">Ahmet Turan Özdemir</div>
+            <div class="speaker-role">Aspilsan Enerji Genel Müdürü / CEO</div>
+            <p class="speaker-bio mb-0">
+              Bilkent Üniversitesi Elektrik-Elektronik Mühendisliği mezunu olan Özdemir, enerji teknolojileri ve savunma sanayii alanında 20 yılı aşkın deneyime sahiptir. ASPİLSAN Enerji’de lityum-iyon batarya teknolojilerinin geliştirilmesine liderlik etmektedir.
+            </p>
           </div>
         </div>
-        <!-- 2 -->
-        <div class="col-lg-6">
-          <div class="card-modern speaker-card">
-            <img class="speaker-img" alt="Konuşmacı 2" src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=400&auto=format&fit=crop">
-            <div>
-              <div class="speaker-name">Konuşmacı Adı 2</div>
-              <div class="speaker-role">Akademisyen</div>
-              <p class="speaker-bio mb-0">Bilimsel merakıyla gençleri araştırmaya teşvik eden, açık bilim savunucusu bir eğitimci.</p>
-            </div>
+      </div>
+
+      <!-- 2: Sabrican Onay Yontar -->
+      <div class="col-lg-6">
+        <div class="card-modern speaker-card">
+          <img class="speaker-img" alt="Sabrican Onay Yontar" src="https://images.chesscomfiles.com/uploads/v1/user/12345678.abc.jpg">
+          <div>
+            <div class="speaker-name">Sabrican Onay Yontar</div>
+            <div class="speaker-role">Satranç İçerik Üreticisi</div>
+            <p class="speaker-bio mb-0">
+              İstanbul Teknik Üniversitesi Uzay Mühendisliği mezunu olan Yontar, Erasmus programıyla Yunanistan’da eğitim görmüştür. Satranç yayıncılığı ve içerik üretimiyle tanınan Yontar, Chess.com ve Twitch üzerinden binlerce takipçiye ulaşmaktadır.
+            </p>
           </div>
         </div>
-        <!-- 3 -->
-        <div class="col-lg-6">
-          <div class="card-modern speaker-card">
-            <img class="speaker-img" alt="Konuşmacı 3" src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?q=80&w=400&auto=format&fit=crop">
-            <div>
-              <div class="speaker-name">Konuşmacı Adı 3</div>
-              <div class="speaker-role">Tasarımcı</div>
-              <p class="speaker-bio mb-0">Kullanıcı odaklı yaklaşımıyla karmaşık sorunları yalın ve etkili deneyimlere dönüştürüyor.</p>
-            </div>
+      </div>
+
+      <!-- 3: Prof. Dr. Oğuz Yoldaş -->
+      <div class="col-lg-6">
+        <div class="card-modern speaker-card">
+          <img class="speaker-img" alt="Prof. Dr. Oğuz Yoldaş" src="https://avesis.cu.edu.tr/oguzyoldas/image-profile.jpg">
+          <div>
+            <div class="speaker-name">Prof. Dr. Oğuz Yoldaş</div>
+            <div class="speaker-role">Çukurova Üniversitesi Dekanı</div>
+            <p class="speaker-bio mb-0">
+              Çukurova Üniversitesi Diş Hekimliği Fakültesi Endodonti Anabilim Dalı öğretim üyesi olan Yoldaş, 100’den fazla akademik yayına sahiptir. Fakülte Dekanı olarak bilimsel araştırmaları ve genç diş hekimlerinin yetişmesini desteklemektedir.
+            </p>
           </div>
         </div>
-        <!-- 4 -->
-        <div class="col-lg-6">
-          <div class="card-modern speaker-card">
-            <img class="speaker-img" alt="Konuşmacı 4" src="https://images.unsplash.com/photo-1544723795-3fb6469f5b39?q=80&w=400&auto=format&fit=crop">
-            <div>
-              <div class="speaker-name">Konuşmacı Adı 4</div>
-              <div class="speaker-role">Sosyal Girişimci</div>
-              <p class="speaker-bio mb-0">Toplumsal etki projeleriyle dezavantajlı gruplara sürdürülebilir çözümler üretiyor.</p>
-            </div>
+      </div>
+
+      <!-- 4: Seda Saygı Aktaş -->
+      <div class="col-lg-6">
+        <div class="card-modern speaker-card">
+          <img class="speaker-img" alt="Seda Saygı Aktaş" src="https://media.licdn.com/dms/image/C4D03AQF/image-profile-seda.jpg">
+          <div>
+            <div class="speaker-name">Seda Saygı Aktaş</div>
+            <div class="speaker-role">A320 Pilotu / Bilgisayar Mühendisi</div>
+            <p class="speaker-bio mb-0">
+              Sakarya Üniversitesi Bilgisayar Mühendisliği mezunu olan Aktaş, Pegasus Airlines’ta A320 First Officer olarak görev yapmaktadır. Havacılık tutkusunu mühendislik altyapısıyla birleştirerek genç kadın pilotlara ilham vermektedir.
+            </p>
           </div>
         </div>
-        <!-- 5 -->
-        <div class="col-lg-6">
-          <div class="card-modern speaker-card">
-            <img class="speaker-img" alt="Konuşmacı 5" src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?q=80&w=400&auto=format&fit=crop">
-            <div>
-              <div class="speaker-name">Konuşmacı Adı 5</div>
-              <div class="speaker-role">Yazar</div>
-              <p class="speaker-bio mb-0">Hikâye anlatımını veriyle buluşturarak değişim için ikna edici anlatılar kuruyor.</p>
-            </div>
+      </div>
+
+      <!-- 5: İlker Yörü -->
+      <div class="col-lg-6">
+        <div class="card-modern speaker-card">
+          <img class="speaker-img" alt="İlker Yörü" src="https://media.licdn.com/dms/image/C4D03AQF/image-profile-ilker.jpg">
+          <div>
+            <div class="speaker-name">İlker Yörü</div>
+            <div class="speaker-role">Co-Founder / Bilgisayar Mühendisi</div>
+            <p class="speaker-bio mb-0">
+              Koç Üniversitesi Bilgisayar Bilimleri ve Ekonomi mezunu olan Yörü, Mindra’nın kurucu ortağı ve CTO’sudur. Bosch Türkiye’de veri mühendisliği ve yazılım geliştirme deneyimiyle teknoloji ve girişimcilik alanında öne çıkmaktadır.
+            </p>
           </div>
         </div>
-        <!-- 6 -->
-        <div class="col-lg-6">
-          <div class="card-modern speaker-card">
-            <img class="speaker-img" alt="Konuşmacı 6" src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?q=80&w=400&auto=format&fit=crop">
-            <div>
-              <div class="speaker-name">Konuşmacı Adı 6</div>
-              <div class="speaker-role">Mühendis</div>
-              <p class="speaker-bio mb-0">Üretim ve otomasyon alanında ölçeklenebilir çözümler geliştirerek yerel endüstriye katkı sağlıyor.</p>
-            </div>
-          </div>
-        </div>
-        <!-- 7 -->
-        <div class="col-lg-6">
-          <div class="card-modern speaker-card">
-            <img class="speaker-img" alt="Konuşmacı 7" src="https://images.unsplash.com/photo-1525134479668-1bee5c7c6845?q=80&w=400&auto=format&fit=crop">
-            <div>
-              <div class="speaker-name">Konuşmacı Adı 7</div>
-              <div class="speaker-role">Sanatçı</div>
-              <p class="speaker-bio mb-0">Disiplinler arası üretimle sanatı kamusal alana taşıyan yenilikçi bir anlatıcı.</p>
-            </div>
-          </div>
-        </div>
-        <!-- 8 -->
-        <div class="col-lg-6">
-          <div class="card-modern speaker-card">
-            <img class="speaker-img" alt="Konuşmacı 8" src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?q=80&w=400&auto=format&fit=crop">
-            <div>
-              <div class="speaker-name">Konuşmacı Adı 8</div>
-              <div class="speaker-role">Araştırmacı</div>
-              <p class="speaker-bio mb-0">Veri odaklı yaklaşımıyla yerel sorunlara ölçülebilir ve etkili çözümler sunuyor.</p>
-            </div>
+      </div>
+
+      <!-- 6: Prof. Dr. Orhan Görgülü -->
+      <div class="col-lg-6">
+        <div class="card-modern speaker-card">
+          <img class="speaker-img" alt="Prof. Dr. Orhan Görgülü" src="https://profdrorhangorgulu.com/images/orhan-gorgulu-profile.jpg">
+          <div>
+            <div class="speaker-name">Prof. Dr. Orhan Görgülü</div>
+            <div class="speaker-role">KBB Uzmanı</div>
+            <p class="speaker-bio mb-0">
+              Hacettepe Üniversitesi Tıp Fakültesi mezunu olan Görgülü, Ankara Numune ve Adana Numune Hastanelerinde görev yapmıştır. Sağlık Bilimleri Üniversitesi Adana Şehir Eğitim ve Araştırma Hastanesi’nde profesör olarak KBB alanında hizmet vermektedir.
+            </p>
           </div>
         </div>
       </div>
     </div>
-  </section>
-
+  </div>
+</section>
+  
   <!-- Mekan -->
   <section id="mekan" class="section">
     <div class="container">
